rotating id UI works
